# mer-proto

./: Cargo.toml  LICENSE  README.md  test  test.mer
samples/: block.mer  collatz.mer  complex.mer  counter.mer  fibonacci.mer  hello_world.mer  iterative_fibonacci.mer  list.mer  n_queens.mer  operations.mer  primes.mer  recursive_fibonacci.mer  recursive_fibonacci.out  references.mer  references.out  rule_110.mer  short_circuit.mer  unreachable.mer
samples_test/: arithmetic_00.mer  arithmetic_01.mer  arithmetic_02.mer  arithmetic_03.mer  arithmetic_04.mer  array_as_func_arg.mer  array_as_func_arg_many.mer  array_as_func_return.mer  array_assign_at_index.mer  array_assign_at_index_many.mer  array_assign_at_index_nested.mer  array_assign_heap_at_index.mer  array_assign_heap_at_index_many.mer  array_assign_heap_at_index_nested.mer  array_assign_immediate_ref_one.mer  array_assign_immediate_ref_three.mer  array_assign_immediate_ref_two.mer  array_assign_in_func.mer  array_assign_index.mer  array_assign_index_many.mer  array_assign_index_nested.mer  array_assign_ref_one.mer  array_assign_ref_three.mer  array_assign_ref_two.mer  array_assign_value.mer  array_copy.mer  array_func_arg_realloc.mer  array_immediate_heap.mer  array_indexing.mer  array_init.mer  array_nested.mer  array_nested_indexing.mer  array_ref.mer  assign_complex_00.mer  assign_complex_01.mer  boolean_00.mer  boolean_01.mer  boolean_02.mer  boolean_03.mer  capture_closure_one.mer  (+231 more)
src/: cli.rs  cmd.rs  lib.rs  mer.rs  msg.rs
src/binaries/: mod.rs  opcode.rs  tests.rs
src/binary/: disassembly.rs  error.rs  (+3 more)
(+107 files in other folders)
