[package]
name = "merlang"
version = "0.1.0"
authors = ["catapillie"]
description = "mer programming language"
edition = "2021"

[lib]
name = "merlib"
path = "src/lib.rs"

[[bin]]
name = "mer"
path = "src/mer.rs"

[dependencies]
byteorder = "1.5.0"
colored = "2.0.4"
either = "1.9.0"
pico-args = "0.5.0"
slab = "0.4.9"
