[package]
name = "merlang"
version = "0.1.0"
authors = ["catapillie"]
description = "mer programming language"
edition = "2021"

[profile.release]
lto = "fat"

[lib]
name = "merlib"
path = "src/lib.rs"

[[bin]]
name = "mer"
path = "src/mer.rs"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.0", features = ["derive"] }
colored = "2.0.4"
itertools = "0.12.1"
sys-locale = "0.3.1"
thiserror = "1.0.52"
